--- a/todoList.html
+++ b/todoList.html
@@ -3,10 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>操作 HTML 元素 - To-Do List</title>
-  <style></style>
+  <style>
+    
+  </style>
   <script type="text/javascript" src="js/todo.js"></script>
 </head>
 <body>
-  
+  <input type="text" id="input">
+  <button onclick="createToDo()"> + </button>
+  <div id="todolist"></div>
 </body>
 </html>
