--- a/q1.html
+++ b/q1.html
@@ -40,7 +40,7 @@
       border-width: 7px;
     }
   </style>
-  <script type="text/javascript" src="js/event(2).js"></script>
+  <script type="text/javascript" src="js/q1.js"></script>
 </head>
 <body>
   <table style="margin:0px auto;padding: 10px;border:2px solid;border-color:#1E90FF">
@@ -52,7 +52,9 @@
       </td>
       <td>
         <!--- 倒數計時器 -->
-        <div class="div" id="timer">5</div>
+        <div class="div" id="timer">0</div><br>
+        <input type="text" id="set-count">
+        <span><input type="button" value="設定秒數" onclick="setCount()"></span>
       </td>
       </tr>
       <tr>
