--- a/q2.html
+++ b/q2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>事件驅動-(3) 表單驗證</title>
   <style></style>
-  <script type="text/javascript" src="js/event(3).js"></script>
+  <script type="text/javascript" src="js/q2.js"></script>
 </head>
 <body>
   <form action="">
