--- a/q3.html
+++ b/q3.html
@@ -25,7 +25,7 @@
           alert("你並沒有輸入任何文字")
           return;
         }
-        this.parentNode.lastChild.innerHTML = input;
+        this.parentNode.firstChild.innerHTML = input;
         document.getElementById("input").value = "";
       }
       replaceButton.textContent = "R";
@@ -34,8 +34,7 @@
       removeButton.textContent = "V";
       todo.appendChild(removeButton);
       removeButton.onclick = function() {
-        var r = confirm("真的要刪除嗎？")
-        if (r==true) {
+        if (confirm("真的要刪除嗎？")) {
           this.parentNode.parentNode.removeChild(this.parentNode);
         } else {
           return;
